--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ html,body{
   height: 100%;
   width: 100%;
   place-items: center;
-  background: linear-gradient(375deg, #b3aae7, #0015ff);
+  /*background: linear-gradient(375deg, #b3aae7, #0015ff);*/
+  background-image: url(https://images.unsplash.com/photo-1695982207250-8ab2901d575d?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
 }
 ::selection{
   color: #c3b7fd;
